--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,24 +1,27 @@
 name: Deno CI
-on:
+'on':
   push:
     branches:
       - master
 jobs:
   build:
-    name: ${{ matrix.kind }} ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    name: '${{ matrix.kind }} ${{ matrix.os }}'
+    runs-on: '${{ matrix.os }}'
+    if: '!contains(github.event.head_commit.message, ''[skip ci]'')'
     strategy:
       matrix:
-        os: [macOS-latest, ubuntu-latest, windows-latest]
+        os:
+          - macOS-latest
+          - ubuntu-latest
+          - windows-latest
     env:
       GH_ACTIONS: true
       DENO_BUILD_MODE: release
       V8_BINARY: true
       APP_ID: 12345
       API_KEY: RGAPI-TEST
-      API_BASE_URL: https://www.example.com/apis/
-      STATIC_BASE_URL: https://www.example.com/static/
+      API_BASE_URL: 'https://www.example.com/apis/'
+      STATIC_BASE_URL: 'https://www.example.com/static/'
       CACHE_DIR: ./.cache
     steps:
       - uses: actions/checkout@v2
@@ -27,4 +30,4 @@ jobs:
         with:
           deno-version: 1.x
       - name: Tests
-				run: deno test test/ --allow-read --allow-env --allow-net
+        run: deno test test/ --allow-read --allow-env --allow-net
