--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -8,24 +8,24 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Deno
-      uses: denolib/setup-deno@master
-        with:
-          deno-version: 1.x
-      - name: Tests
-        run: deno lint --unstable
+        uses: denolib/setup-deno@master
+          with:
+            deno-version: 1.x
+        - name: Lint
+          run: deno lint --unstable
 
-  lint:
+  lock:
     name: Check Lock
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v2
       - name: Setup Deno
-      uses: denolib/setup-deno@master
-        with:
-          deno-version: 1.x
-      - name: Tests
-        run: deno cache --lock=lock.json  --unstable src/riot/index.ts
+        uses: denolib/setup-deno@master
+          with:
+            deno-version: 1.x
+        - name: Lock validate
+          run: deno cache --lock=lock.json  --unstable src/riot/index.ts
 
   build:
     name: '${{ matrix.kind }} ${{ matrix.os }}'
