--- a/.github/workflows/riot.yml
+++ b/.github/workflows/riot.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Lock validate
         run: deno cache --lock=src/riot/lock.json  --unstable src/riot/index.ts
 
-  build:
+  test:
     name: '${{ matrix.kind }} ${{ matrix.os }}'
     runs-on: '${{ matrix.os }}'
     if: '!contains(github.event.head_commit.message, ''[skip ci]'')'
