--- a/.github/workflows/riot.yml
+++ b/.github/workflows/riot.yml
@@ -2,10 +2,10 @@ name: Riot CI
 on:
   push:
     paths:
-    - 'src/riot/**'
+    - 'modules/riot/**'
   pull_request:
     paths:
-    - 'src/riot/**'
+    - 'modules/riot/**'
 
 jobs:
   lint:
@@ -19,7 +19,7 @@ jobs:
         with:
           deno-version: 1.x
       - name: Lint
-        run: deno lint src/riot/ --unstable
+        run: deno lint modules/riot/ --unstable
 
   lock:
     name: Check Lock
@@ -32,7 +32,7 @@ jobs:
         with:
           deno-version: 1.x
       - name: Lock validate
-        run: deno cache --lock=src/riot/lock.json  --unstable src/riot/index.ts
+        run: deno cache --lock=modules/riot/lock.json  --unstable modules/riot/index.ts
 
   test:
     name: '${{ matrix.kind }} ${{ matrix.os }}'
@@ -55,4 +55,4 @@ jobs:
         with:
           deno-version: 1.x
       - name: Tests
-        run: deno test src/riot/ --allow-read --allow-write --unstable --allow-env --allow-net
+        run: deno test modules/riot/ --allow-read --allow-write --unstable --allow-env --allow-net
